force-app/main/default/objects/StnryAssetEnvrSrc/StnryAssetEnvrSrc.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>