force-app/main/default/objects/StnryAssetEnvrSrc/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Venkat: Created as part of the user story &apos;UC017_US02&apos;
Purpose: To Capture the Active status of Site Information.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>