force-app/main/default/objects/StnryAssetEnvrSrc/fields/Building_Energy_Intensity__c.field-meta.xml
<CustomField>
    <fullName>Building_Energy_Intensity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CJ: Created for NZC Implementation, Purpose: to associate BEI on site information so that same BEI can populate on related carbon footprint.</description>
    <label>Building Energy Intensity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>BldgEnrgyIntensity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Building Energy Intensity</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>BldgEnrgyIntensity</referenceTo>
    <relationshipLabel>Site Information</relationshipLabel>
    <relationshipName>Site_Informations</relationshipName>
    <type>Lookup</type>
</CustomField>