force-app/main/default/objects/StnryAssetEnvrSrc/fields/Commencement_Date_2__c.field-meta.xml
<CustomField>
    <fullName>Commencement_Date_2__c</fullName>
    <description>AJ: Created for NZC Implementation UC001_US12, This field is created to capture Commencement Date for LeaseID 2:</description>
    <label>Commencement Date 2</label>
    <type>Date</type>
</CustomField>