force-app/main/default/objects/StnryAssetEnvrSrc/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>AK: Created this field as part of UC002_US02 to capture comments.</description>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>