force-app/main/default/objects/StnryAssetEnvrSrc/fields/Contracted_Power_kW__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Power_kW__c</fullName>
    <description>Venkat: Created as part of NZC Phase 2 Implementation.
Purpose: To capture the contracted power value</description>
    <label>Contracted Power (kW)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>