force-app/main/default/objects/StnryAssetEnvrSrc/fields/Data_Approver__c.field-meta.xml
<CustomField>
    <fullName>Data_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>VB, Venkat: Created for NZC Implementation UC004_US01
Purpose: Data approver user lookup field created for approval process</description>
    <label>Data Approver</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>User.User_Type__c</field>
            <operation>equals</operation>
            <value>Data Approver</value>
        </filterItems>
        <filterItems>
            <field>User.User_Type__c</field>
            <operation>equals</operation>
            <value>ESG Team</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Stationary_Asset_Environmental_Sources1</relationshipName>
    <type>Lookup</type>
</CustomField>