force-app/main/default/objects/StnryAssetEnvrSrc/fields/Data_Processor__c.field-meta.xml
<CustomField>
    <fullName>Data_Processor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SB: Created for NZC Implementation
Purpose: To share the site information records using flow</description>
    <label>Data Processor</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>User Type Data Processor Does not exist, please select data processor user type</errorMessage>
        <filterItems>
            <field>User.User_Type__c</field>
            <operation>equals</operation>
            <value>Data Processor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Site_Informations</relationshipName>
    <type>Lookup</type>
</CustomField>