force-app/main/default/objects/StnryAssetEnvrSrc/fields/Data_Validator__c.field-meta.xml
<CustomField>
    <fullName>Data_Validator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>VB, Venkat: Created for NZC Implementation UC004_US01
 Purpose: Data validator user lookup field created for approval process</description>
    <label>Data Validator</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.User_Type__c</field>
            <operation>equals</operation>
            <value>Data Validator</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Stationary_Asset_Environmental_Sources</relationshipName>
    <type>Lookup</type>
</CustomField>