force-app/main/default/objects/StnryAssetEnvrSrc/fields/Deactivation_Date__c.field-meta.xml
<CustomField>
    <fullName>Deactivation_Date__c</fullName>
    <description>Venkat: Created as part of the user story &apos;UC017_US02&apos;
Purpose: To Capture the Date when a record is deactivated.</description>
    <label>Deactivation Date</label>
    <type>Date</type>
</CustomField>