force-app/main/default/objects/StnryAssetEnvrSrc/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <description>CJ: Created for NZC Data Gap BEI Calculation Implementation, Purpose: To calculate Active Duration of site within year.</description>
    <formula>IF(2022 == YEAR( Expiry_Date_1__c), (Expiry_Date_1__c- DATE(2022, 1, 1)+1),
IF(2022 == YEAR( Expiry_Date_2__c), (Expiry_Date_2__c- DATE(2022, 1, 1)+1),  
IF(2022 == YEAR( Expiry_Date_3__c), (Expiry_Date_3__c- DATE(2022, 1, 1)+1),  
IF(2022 == YEAR( Expiry_Date_4__c), (Expiry_Date_4__c- DATE(2022, 1, 1)+1),  
IF(2022 == YEAR( Expiry_Date_5__c), (Expiry_Date_5__c- DATE(2022, 1, 1)+1),  
IF(2022 == YEAR( Expiry_Date_6__c), (Expiry_Date_6__c- DATE(2022, 1, 1)+1), 
365) ) ) ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>