force-app/main/default/objects/StnryAssetEnvrSrc/fields/Electricity_Emission_Factor__c.field-meta.xml
<CustomField>
    <fullName>Electricity_Emission_Factor__c</fullName>
    <description>Venkat:Created for the NZC Implementation
Purpose: To show the auto populated value of Electricity Emission Factor.</description>
    <formula>HYPERLINK(&quot;/&quot;&amp; ElectricityEmssnFctrId  ,  ElectricityEmssnFctr.Name , &apos;_self&apos;)</formula>
    <label>Electricity Emission Factor</label>
    <type>Text</type>
</CustomField>