force-app/main/default/objects/StnryAssetEnvrSrc/fields/Expiry_Date_2__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date_2__c</fullName>
    <description>AJ: Created for NZC Implementation UC001_US12, This field is created to capture Expiry Date for LeaseID 2:</description>
    <label>Expiry Date 2</label>
    <type>Date</type>
</CustomField>