force-app/main/default/objects/StnryAssetEnvrSrc/fields/Expiry_Date_3__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date_3__c</fullName>
    <description>AJ: Created for NZC Implementation UC001_US12, This field is created to capture Expiry Date for LeaseID 3:</description>
    <label>Expiry Date 3</label>
    <type>Date</type>
</CustomField>