force-app/main/default/objects/StnryAssetEnvrSrc/fields/Invoice_Data_for_Diesel__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Data_for_Diesel__c</fullName>
    <description>CJ: Created for NZC Data gap filling Implementation, Purpose: To get the percentage of Energy use with ratio of Sum of Diesel energy use duration days to site activation duration.</description>
    <formula>Sum_Of_Diesel_Energy_Use_Duration__c / Sum_Of_Diesel_Energy_Use_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sum of Actual Diesel Energy use duration days by Sum of Actual and Estimated Diesel Energy use duration days</inlineHelpText>
    <label>% Invoice Data for Diesel</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>