force-app/main/default/objects/StnryAssetEnvrSrc/fields/Invoice_Data_for_Natural_Gas__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Data_for_Natural_Gas__c</fullName>
    <description>CJ: Created for NZC Data gap filling Implementation, Purpose: To get the percentage of Energy use with ratio of Sum of Natural gas energy use duration days to site activation duration.</description>
    <formula>Sum_Of_Natural_Gas_Energy_Use_Duration__c /  Sum_Of_Natural_Gas_Energy_Use_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sum of Actual Natural Gas Energy use duration days by Sum of Actual and Estimated Natural Gas Energy use duration days</inlineHelpText>
    <label>% Invoice Data for Natural Gas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>