force-app/main/default/objects/StnryAssetEnvrSrc/fields/Lease_ID4__c.field-meta.xml
<CustomField>
    <fullName>Lease_ID4__c</fullName>
    <description>AJ: Created for NZC Implementation UC001_US12, This field is created to capture fourth Lease ID for Stationary Asset Environmental Source:</description>
    <label>Lease ID4</label>
    <length>100</length>
    <type>Text</type>
</CustomField>