force-app/main/default/objects/StnryAssetEnvrSrc/fields/Lease_Status_2__c.field-meta.xml
<CustomField>
    <fullName>Lease_Status_2__c</fullName>
    <description>CJ: Created for NZC implementation. This field will give option to choose lease status for Lease ID 2</description>
    <label>Lease Status 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>