force-app/main/default/objects/StnryAssetEnvrSrc/fields/Lease_Status_3__c.field-meta.xml
<CustomField>
    <fullName>Lease_Status_3__c</fullName>
    <description>CJ: Created for NZC implementation. This field will give option to choose lease status for lease ID 3</description>
    <label>Lease Status 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>