force-app/main/default/objects/StnryAssetEnvrSrc/fields/NZC_Declaration_Message_On_Site_Info__c.field-meta.xml
<CustomField>
    <fullName>NZC_Declaration_Message_On_Site_Info__c</fullName>
    <description>HA: Created for NZC Implementation, UC001_US07 Purpose: This field created to display the Declaration Message above the Declaration Checkbox on the layout.</description>
    <formula>$Label.NZC_Declaration_Message</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Declaration Message</label>
    <type>Text</type>
</CustomField>