force-app/main/default/objects/StnryAssetEnvrSrc/fields/NZC_ULA__c.field-meta.xml
<CustomField>
    <fullName>NZC_ULA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Harshvardhan: Created this checkbox field for the ULA requirement. If this field is true, then the site information is ULA.</description>
    <label>ULA</label>
    <type>Checkbox</type>
</CustomField>