force-app/main/default/objects/StnryAssetEnvrSrc/fields/Other_Emission_Factor__c.field-meta.xml
<CustomField>
    <fullName>Other_Emission_Factor__c</fullName>
    <description>Venkat:Created for the NZC Implementation
Purpose: To show the auto populated value of Other Emission Factor.</description>
    <formula>HYPERLINK(&quot;/&quot;&amp;  OtherEmssnFctrId  ,  OtherEmssnFctr.Name  , &apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other Emission Factor</label>
    <type>Text</type>
</CustomField>