force-app/main/default/objects/StnryAssetEnvrSrc/fields/OtherStnryAstType__c.field-meta.xml
<CustomField>
    <fullName>OtherStnryAstType__c</fullName>
    <description>CJ: Created for NZC Implantation, UC001_US05 Field created to add other stationary asset type whenever Stationary asset type picklist value is other.</description>
    <label>Other Stationary Asset Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>