force-app/main/default/objects/StnryAssetEnvrSrc/fields/percent_of_year_operational__c.field-meta.xml
<CustomField>
    <fullName>percent_of_year_operational__c</fullName>
    <description>Venkat: Created as part of NZC Phase 2 Implementation.
Purpose: To capture the operational percentage in a year.</description>
    <label>% of year operational</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>