force-app/main/default/objects/StnryAssetEnvrSrc/fields/Power_Utilization__c.field-meta.xml
<CustomField>
    <fullName>Power_Utilization__c</fullName>
    <description>Venkat: Created as part of NZC Phase 2 Implementation.
Purpose: To capture the power utilization percentage.</description>
    <label>Power Utilization %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>