force-app/main/default/objects/StnryAssetEnvrSrc/fields/Site_Headcount__c.field-meta.xml
<CustomField>
    <fullName>Site_Headcount__c</fullName>
    <description>AJ: Created for NZC Implementation PhII_UC008_US07, This field is created to capture Site Headcount:</description>
    <label>Site Headcount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>