force-app/main/default/objects/StnryAssetEnvrSrc/fields/Stationary_Asset_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Stationary_Asset_External_ID__c</fullName>
    <description>RRD: Created for NZC Implementation UC001_US06, Purpose: This Field is used to store the External id and the value is getting from   StationaryAssetIdentifier value.</description>
    <externalId>true</externalId>
    <label>Stationary Asset External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>