force-app/main/default/objects/StnryAssetEnvrSrc/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>VB, Venkat: Created for NZC Implementation UC002_US01
Purpose: To Capture the Approval Status of the record.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
                <default>true</default>
                <label>Created</label>
            </value>
            <value>
                <fullName>Pending for Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Revised</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>