force-app/main/default/objects/StnryAssetEnvrSrc/fields/Sum_Of_Diesel_Energy_Use_Total__c.field-meta.xml
<CustomField>
    <fullName>Sum_Of_Diesel_Energy_Use_Total__c</fullName>
    <description>CJ: Created for NZC Implementation, Purpose: To Calculate sum of actual and estimated energy use duration days</description>
    <formula>if((Sum_Of_Diesel_Energy_Use_Duration__c +  Sum_Of_SG_Diesel_Energy_Use_Duration__c) &lt;=365 &amp;&amp;  Sum_Of_SG_Diesel_Energy_Use_Duration__c &gt;0  ,Sum_Of_Diesel_Energy_Use_Duration__c +  Sum_Of_SG_Diesel_Energy_Use_Duration__c,365)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field represents sum of actual and estimated Diesel energy use duration days</inlineHelpText>
    <label>SumOfDieselEnergyUse(Total)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>