force-app/main/default/objects/StnryAssetEnvrSrc/fields/Sum_Of_Electricity_Energy_Use_Duration__c.field-meta.xml
<CustomField>
    <fullName>Sum_Of_Electricity_Energy_Use_Duration__c</fullName>
    <description>CJ: Created for NZC Implementation, Purpose: to get the aggregate duration for calculating percentage of invoice data for BEI Calculation Identification.</description>
    <inlineHelpText>This field represents sum of all the related energy use duration in days for Electricity fuel type.</inlineHelpText>
    <label>SumOfElectricityEnergyUse(Actual)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>