force-app/main/default/objects/StnryAssetEnvrSrc/fields/Sum_Of_SG_NaturalGas_Energy_Use_Duration__c.field-meta.xml
<CustomField>
    <fullName>Sum_Of_SG_NaturalGas_Energy_Use_Duration__c</fullName>
    <description>CJ: Created for NZC Implantation, purpose: To calculate sum of all related System Generated/Accrued/Estimated energy use for Natural Gas fuel type.</description>
    <inlineHelpText>This field represent sum of all related system generated/accrued/estimated energy use duration in days for Natural Gas fuel type.</inlineHelpText>
    <label>SumOfNaturalGasEnergyUse(Estimate)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>