force-app/main/default/objects/StnryAssetEnvrSrc/fields/Used_kW__c.field-meta.xml
<CustomField>
    <fullName>Used_kW__c</fullName>
    <description>Venkat: Created as part of NZC Phase 2 Implementation.
Purpose: To capture the used power value</description>
    <label>Used (kW)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>