force-app/main/default/objects/StnryAssetEnvrSrc/recordTypes/Commercial_Building.recordType-meta.xml
<RecordType>
    <fullName>Commercial_Building</fullName>
    <active>true</active>
    <label>Commercial Building</label>
</RecordType>