force-app/main/default/objects/StnryAssetEnvrSrc/recordTypes/Data_Center.recordType-meta.xml
<RecordType>
    <fullName>Data_Center</fullName>
    <active>true</active>
    <label>Data Center</label>
</RecordType>