force-app/main/default/objects/StnryAssetEnvrSrc/validationRules/NZC_Other_stnry_asset_type_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>NZC_Other_stnry_asset_type_validation</fullName>
    <active>true</active>
    <description>CJ: Created for NZC Implantation UC001_US05 Validation to make other stationary asset type text field mandatory when stationary asset type is selected to other</description>
    <errorConditionFormula>AND(
				 ISPICKVAL(StationaryAssetType , &apos;other&apos;),
				 ISBLANK(OtherStnryAstType__c ) 
 )
	||
	AND(
			  	NOT(ISPICKVAL(StationaryAssetType , &apos;other&apos;)),
					 NOT(ISBLANK(OtherStnryAstType__c ))
	)</errorConditionFormula>
    <errorDisplayField>OtherStnryAstType__c</errorDisplayField>
    <errorMessage>&quot;Other Stationary Asset Type Is Required Only When Stationary Asset Type value is Other&quot;</errorMessage>
</ValidationRule>