force-app/main/default/objects/StnryAssetEnvrSrc/validationRules/NZC_Owner_Update_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>NZC_Owner_Update_Validation</fullName>
    <active>true</active>
    <description>MD: Created for NZC Implementation, Purpose: This validation ensure that you cannot update the owner of this record.</description>
    <errorConditionFormula>AND(
ISPICKVAL( $User.User_Type__c ,&quot;Real Estate Team&quot;) ||
ISPICKVAL( $User.User_Type__c ,&quot;System Admin&quot;),
ISCHANGED(OwnerId)
)</errorConditionFormula>
    <errorMessage>You cannot update the owner of this record.</errorMessage>
</ValidationRule>