force-app/main/default/objects/StnryAssetEnvrSrc/validationRules/NZC_Restrict_Inactive_Site_Edit.validationRule-meta.xml
<ValidationRule>
    <fullName>NZC_Restrict_Inactive_Site_Edit</fullName>
    <active>true</active>
    <description>Venkat: Created as part of user story &apos;UC017_US03&apos;
Purpose: Restricting the Real Estate user to editing the record is inactive</description>
    <errorConditionFormula>AND(
    ISPICKVAL( $User.User_Type__c ,&quot;Real Estate Team&quot;),
    PRIORVALUE( Active__c ) = FALSE)</errorConditionFormula>
    <errorMessage>Inactive Site cannot be edited.</errorMessage>
</ValidationRule>