force-app/main/default/objects/StnryAssetEnvrSrc/validationRules/NZC_Site_Information_State_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>NZC_Site_Information_State_Mandatory</fullName>
    <active>true</active>
    <description>Venkat: Implemented for Emission Factor Auto population.
Purpose: When a Site Information Record is created with country &apos;US&apos;, then the state needs to be populated.</description>
    <errorConditionFormula>AND(
ISPICKVAL( Country , &quot;US&quot;),
OR(
ISBLANK(State),
LEN(State) &lt;&gt; 2,
NOT(CONTAINS( $Label.NZC_US_Country_State_Codes , State)),
CONTAINS (State,&apos;;&apos;)
)
)</errorConditionFormula>
    <errorMessage>Please enter the valid 2 character State Code if Country entered is US</errorMessage>
</ValidationRule>