force-app/main/default/objects/StnryAssetEnvrSrc/listViews/All_StnryAssetEnvrSrc.listView-meta.xml
<ListView>
    <fullName>All_StnryAssetEnvrSrc</fullName>
    <columns>Name</columns>
    <columns>ParentEnvironmentalSource</columns>
    <columns>StationaryAssetType</columns>
    <columns>BusinessRegion</columns>
    <columns>Data_Approver__c</columns>
    <columns>Data_Validator__c</columns>
    <columns>CreatedDate</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Site informations</label>
</ListView>