force-app/main/default/objects/StnryAssetEnvrSrc/listViews/AMER_Region.listView-meta.xml
<ListView>
    <fullName>AMER_Region</fullName>
    <columns>Name</columns>
    <columns>ParentEnvironmentalSource</columns>
    <columns>StationaryAssetType</columns>
    <columns>BusinessRegion</columns>
    <columns>CreatedDate</columns>
    <columns>CreatedBy</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BusinessRegion</field>
        <operation>equals</operation>
        <value>AMER</value>
    </filters>
    <label>AMER Region</label>
    <sharedTo>
        <group>Data_Approver_Team</group>
        <group>Data_Validator_Team</group>
        <group>RO_NZC_users_group</group>
        <group>Real_Estate_Team</group>
    </sharedTo>
</ListView>